[gd_scene load_steps=12 format=2]

[ext_resource path="res://ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://Shaders/blur.gdshader" type="Shader" id=2]
[ext_resource path="res://Scripts/GUI/PauseMenu.gd" type="Script" id=3]
[ext_resource path="res://Sprites/GUI/Textbox.png" type="Texture" id=4]
[ext_resource path="res://Fonts/FontResources/PressStart2P_Size24.tres" type="DynamicFont" id=5]

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 2 )
shader_param/blur = 0.0
shader_param/brightness = 1.0

[sub_resource type="InputEventAction" id=6]
action = "pause"
pressed = true

[sub_resource type="ShortCut" id=7]
shortcut = SubResource( 6 )

[sub_resource type="Animation" id=4]
resource_name = "Pause"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 0.5 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:material:shader_param/blur")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 0.5 ),
"update": 0,
"values": [ 0.0, 2.5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:material:shader_param/brightness")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 0.5 ),
"update": 0,
"values": [ 1.0, 0.9 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("CenterContainer/NinePatchRect/MarginContainer/VBoxContainer/ResumeButton")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "grab_focus"
} ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:material:shader_param/blur")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:material:shader_param/brightness")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
resource_name = "Unpause"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:material:shader_param/blur")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:material:shader_param/brightness")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="ColorRect"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="ColorRect/CenterContainer"]
margin_left = 260.0
margin_top = 80.0
margin_right = 700.0
margin_bottom = 460.0
rect_min_size = Vector2( 440, 380 )
texture = ExtResource( 4 )
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 32
patch_margin_bottom = 32
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/CenterContainer/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 16
custom_constants/margin_top = 8
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/CenterContainer/NinePatchRect/MarginContainer"]
margin_left = 16.0
margin_top = 8.0
margin_right = 424.0
margin_bottom = 364.0
mouse_filter = 2
custom_constants/separation = 6

[node name="Paused" type="Label" parent="ColorRect/CenterContainer/NinePatchRect/MarginContainer/VBoxContainer"]
margin_right = 408.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 5 )
text = "Paused"
align = 1
valign = 1

[node name="ResumeButton" type="Button" parent="ColorRect/CenterContainer/NinePatchRect/MarginContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 408.0
margin_bottom = 79.0
focus_neighbour_top = NodePath("../MarginContainer/HBoxContainer/TextSpeedSlider")
focus_neighbour_bottom = NodePath("../RestartLevelButton")
mouse_filter = 2
size_flags_vertical = 3
shortcut = SubResource( 7 )
text = "Resume"

[node name="RestartLevelButton" type="Button" parent="ColorRect/CenterContainer/NinePatchRect/MarginContainer/VBoxContainer"]
margin_top = 85.0
margin_right = 408.0
margin_bottom = 135.0
focus_neighbour_top = NodePath("../ResumeButton")
focus_neighbour_bottom = NodePath("../ToggleFullscreenButton")
mouse_filter = 2
size_flags_vertical = 3
text = "Restart Level"

[node name="ToggleFullscreenButton" type="Button" parent="ColorRect/CenterContainer/NinePatchRect/MarginContainer/VBoxContainer"]
margin_top = 141.0
margin_right = 408.0
margin_bottom = 190.0
focus_neighbour_top = NodePath("../RestartLevelButton")
focus_neighbour_bottom = NodePath("../HBoxContainer/GreenButton")
mouse_filter = 2
size_flags_vertical = 3
text = "Toggle Fullscreen"

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/CenterContainer/NinePatchRect/MarginContainer/VBoxContainer"]
margin_top = 196.0
margin_right = 408.0
margin_bottom = 246.0
size_flags_vertical = 3

[node name="RedButton" type="CheckBox" parent="ColorRect/CenterContainer/NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 133.0
margin_bottom = 50.0
focus_neighbour_left = NodePath("../BlueButton")
focus_neighbour_top = NodePath("../../ToggleFullscreenButton")
focus_neighbour_right = NodePath("../GreenButton")
focus_neighbour_bottom = NodePath("../../QuitButton")
size_flags_horizontal = 3
pressed = true
text = "Red"
align = 1

[node name="GreenButton" type="CheckBox" parent="ColorRect/CenterContainer/NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 137.0
margin_right = 270.0
margin_bottom = 50.0
focus_neighbour_left = NodePath("../RedButton")
focus_neighbour_top = NodePath("../../ToggleFullscreenButton")
focus_neighbour_right = NodePath("../BlueButton")
focus_neighbour_bottom = NodePath("../../QuitButton")
size_flags_horizontal = 3
pressed = true
text = "Green"
align = 1

[node name="BlueButton" type="CheckBox" parent="ColorRect/CenterContainer/NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 274.0
margin_right = 408.0
margin_bottom = 50.0
focus_neighbour_left = NodePath("../GreenButton")
focus_neighbour_top = NodePath("../../ToggleFullscreenButton")
focus_neighbour_right = NodePath("../RedButton")
focus_neighbour_bottom = NodePath("../../QuitButton")
size_flags_horizontal = 3
pressed = true
text = "Blue"
align = 1

[node name="QuitButton" type="Button" parent="ColorRect/CenterContainer/NinePatchRect/MarginContainer/VBoxContainer"]
margin_top = 252.0
margin_right = 408.0
margin_bottom = 301.0
focus_neighbour_top = NodePath("../HBoxContainer/GreenButton")
focus_neighbour_bottom = NodePath("../MarginContainer/HBoxContainer/TextSpeedSlider")
mouse_filter = 2
size_flags_vertical = 3
text = "Quit Game"

[node name="HSeparator" type="HSeparator" parent="ColorRect/CenterContainer/NinePatchRect/MarginContainer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 307.0
margin_right = 408.0
margin_bottom = 311.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextSpeed" type="Label" parent="ColorRect/CenterContainer/NinePatchRect/MarginContainer/VBoxContainer"]
margin_top = 317.0
margin_right = 408.0
margin_bottom = 333.0
text = "Text Speed"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/CenterContainer/NinePatchRect/MarginContainer/VBoxContainer"]
margin_top = 339.0
margin_right = 408.0
margin_bottom = 355.0
mouse_filter = 2
custom_constants/margin_right = 16
custom_constants/margin_left = 16

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/CenterContainer/NinePatchRect/MarginContainer/VBoxContainer/MarginContainer"]
margin_left = 16.0
margin_right = 392.0
margin_bottom = 16.0

[node name="Fast" type="Label" parent="ColorRect/CenterContainer/NinePatchRect/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
margin_right = 64.0
margin_bottom = 16.0
text = "Fast"

[node name="TextSpeedSlider" type="HSlider" parent="ColorRect/CenterContainer/NinePatchRect/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 68.0
margin_right = 308.0
margin_bottom = 16.0
focus_neighbour_top = NodePath("../../../QuitButton")
focus_neighbour_bottom = NodePath("../../../ResumeButton")
size_flags_horizontal = 3
size_flags_vertical = 5
max_value = 0.099
step = 0.033
value = 0.033

[node name="Slow" type="Label" parent="ColorRect/CenterContainer/NinePatchRect/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 312.0
margin_right = 376.0
margin_bottom = 16.0
text = "Slow"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../ColorRect")
autoplay = "Unpause"
anims/Pause = SubResource( 4 )
anims/RESET = SubResource( 5 )
anims/Unpause = SubResource( 3 )

[connection signal="pressed" from="ColorRect/CenterContainer/NinePatchRect/MarginContainer/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="ColorRect/CenterContainer/NinePatchRect/MarginContainer/VBoxContainer/RestartLevelButton" to="." method="_on_RestartLevelButton_pressed"]
[connection signal="pressed" from="ColorRect/CenterContainer/NinePatchRect/MarginContainer/VBoxContainer/ToggleFullscreenButton" to="." method="_on_ToggleFullscreenButton_pressed"]
[connection signal="toggled" from="ColorRect/CenterContainer/NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer/RedButton" to="." method="_on_RedButton_toggled"]
[connection signal="toggled" from="ColorRect/CenterContainer/NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer/GreenButton" to="." method="_on_GreenButton_toggled"]
[connection signal="toggled" from="ColorRect/CenterContainer/NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer/BlueButton" to="." method="_on_BlueButton_toggled"]
[connection signal="pressed" from="ColorRect/CenterContainer/NinePatchRect/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="value_changed" from="ColorRect/CenterContainer/NinePatchRect/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/TextSpeedSlider" to="." method="_on_TextSpeedSlider_value_changed"]
